# HighPerformanceComputing1

./: .gitignore  .gitmodules  README.md
01/: vector.c
02/: CMakeLists.txt  matrix.c
03/: bench_gmm.c
04/: CMakeLists.txt
05/: CMakeLists.txt
06/: CMakeLists.txt
09/: mainA.cpp
Quiz/01/: CMakeLists.txt  main.c  quiz01.c  quiz01.h  quiz01.txt
Quiz/02/: CMakeLists.txt  dot.cpp  dot.hpp  gemv.cpp  gemv.hpp  main.cpp  matrix.hpp  vector.hpp
Quiz/03/: CMakeLists.txt  quiz03.cpp
Quiz/04/: .gitignore  CMakeLists.txt  main.cpp  mm-mt.hpp
Sessions/01/: CMakeLists.txt  main.c  vector.h  walltime.c  walltime.h
Sessions/02/: main.c  matrix.h
Sessions/03/: CMakeLists.txt  bench_initmatrix.c  initmatrix.gnuplot  main.c
Sessions/04/: CMakeLists.txt  main.c
Sessions/05/: main_01.c  main_02.c  main_03.c
Sessions/06/: gemv.c
Sessions/09/: CMakeLists.txt  mainB.cpp
Sessions/10/: CMakeLists.txt  gemm.hpp  main01.cpp  main02.cpp  main03.cpp
Sessions/13/: CMakeLists.txt  main.cpp  test.hpp  ulmblas_level1.hpp  ulmblas_level2.hpp  ulmblas_level3.hpp
